kube/valhalla/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valhalla
  namespace: fleet
  labels:
    app.kubernetes.io/name: valhalla
    app.kubernetes.io/part-of: fleet
spec:
  selector:
    app.kubernetes.io/name: valhalla
  ports:
    - name: http
      port: 8002
      targetPort: http
